--- a/app/src/main/res/layout/suggestion.xml
+++ b/app/src/main/res/layout/suggestion.xml
@@ -12,18 +12,11 @@
         android:layout_marginLeft="15dp"
         android:layout_marginTop="15dp"
         android:textColor="#fff"
-        android:text="生活建议"
+        android:text="温馨提示"
         android:textSize="20sp"/>
 
     <TextView
         android:id="@+id/comfort_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="15dp"
-        android:textColor="#fff"/>
-
-    <TextView
-        android:id="@+id/car_wash_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="15dp"
